force-app/main/default/objects/RTR_Reva_Transport_Request__c/RTR_Reva_Transport_Request__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the transport fees concession requests for the students</description>
    <label>REVA Transport Request</label>
    <nameField>
        <displayFormat>TRQ-{0000}</displayFormat>
        <label>REVA Transport Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REVA Transport Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>