force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Amount__c</fullName>
    <label>Adjusted Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>