force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/Amount_to_be_adjusted__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_adjusted__c</fullName>
    <label>Amount to be adjusted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>