force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/Existing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Existing_Amount__c</fullName>
    <label>Existing Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>