force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/Existing_Pickup_Point__c.field-meta.xml
<CustomField>
    <fullName>Existing_Pickup_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Pickup Point</label>
    <referenceTo>RTR_Route_Pick_Up_Point__c</referenceTo>
    <relationshipLabel>Reva Transport Requests (Existing Pickup Point)</relationshipLabel>
    <relationshipName>Reva_Transport_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>