force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/Existing_Route_Master__c.field-meta.xml
<CustomField>
    <fullName>Existing_Route_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Route Master</label>
    <referenceTo>RTR_Route_Master__c</referenceTo>
    <relationshipLabel>Reva Transport Requests (Existing Route Master)</relationshipLabel>
    <relationshipName>Reva_Transport_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>