force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/New_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Amount__c</fullName>
    <label>New Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>