force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/New_Route_Master__c.field-meta.xml
<CustomField>
    <fullName>New_Route_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Route Master</label>
    <referenceTo>RTR_Route_Master__c</referenceTo>
    <relationshipLabel>Reva Transport Requests (New Route Master)</relationshipLabel>
    <relationshipName>Reva_Transport_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>