force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/New_Route_Pick_Up_Point__c.field-meta.xml
<CustomField>
    <fullName>New_Route_Pick_Up_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Route Pick Up Point</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RTR_Route_Pick_Up_Point__c.RTR_Route_Master__c</field>
            <operation>equals</operation>
            <valueField>$Source.New_Route_Master__c</valueField>
        </filterItems>
        <infoMessage>Select Correct Pickup Point</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RTR_Route_Pick_Up_Point__c</referenceTo>
    <relationshipLabel>Reva Transport Requests (New Route Pick Up Point)</relationshipLabel>
    <relationshipName>Reva_Transport_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>