force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early pickup</fullName>
            </value>
            <value>
                <fullName>Late Drop Off</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>early drop off</fullName>
            </value>
            <value>
                <fullName>late pickup</fullName>
            </value>
            <value>
                <fullName>Late Drop Multiple</fullName>
            </value>
            <value>
                <fullName>Early Pickup Multiple</fullName>
            </value>
            <value>
                <fullName>Late Pickup Multiple</fullName>
            </value>
            <value>
                <fullName>Early Drop Off Multiple</fullName>
            </value>
            <value>
                <fullName>Cancel Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>