force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/Route_Specific_Notification__c.field-meta.xml
<CustomField>
    <fullName>Route_Specific_Notification__c</fullName>
    <label>Route Specific Notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Route Number Change Multiple Days</fullName>
            </value>
            <value>
                <fullName>Route Number Change Single day</fullName>
            </value>
            <value>
                <fullName>Change of Route Single Day (Via)</fullName>
            </value>
            <value>
                <fullName>Change of Route Multiple Days(via)</fullName>
            </value>
            <value>
                <fullName>Urgent- Bus Service Disruption</fullName>
            </value>
            <value>
                <fullName>Bus Breakdown During Trip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>