force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>RTR_Adjusted_Amount__c</fullName>
    <description>Amount adjusted on approval by finance team</description>
    <label>Finance Team Comments</label>
    <length>225</length>
    <type>Text</type>
</CustomField>