force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Amount__c.field-meta.xml
<CustomField>
    <fullName>RTR_Amount__c</fullName>
    <description>This field is used to store the concession amount for the student</description>
    <label>Concession Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>