force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>RTR_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved by Department Head</fullName>
            </value>
            <value>
                <fullName>Rejected by Department Head</fullName>
            </value>
            <value>
                <fullName>Approved by Transport Admin</fullName>
            </value>
            <value>
                <fullName>Rejected by Transport Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>