force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Approver__c.field-meta.xml
<CustomField>
    <fullName>RTR_Approver__c</fullName>
    <label>Approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>