force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Assign_driver__c.field-meta.xml
<CustomField>
    <fullName>RTR_Assign_driver__c</fullName>
    <label>Assign Driver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>