force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Assign_Drivers__c.field-meta.xml
<CustomField>
    <fullName>RTR_Assign_Drivers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign Driver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Driver</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Reva_Transport_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>