force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Assign_vehicle__c.field-meta.xml
<CustomField>
    <fullName>RTR_Assign_vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RTR_Vehicle_Master__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>RTR_Vehicle_Master__c</referenceTo>
    <relationshipLabel>REVA Transport Requests</relationshipLabel>
    <relationshipName>Reva_Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>