force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Description__c.field-meta.xml
<CustomField>
    <fullName>RTR_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>