force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>RTR_Descriptions__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>