force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Destination__c.field-meta.xml
<CustomField>
    <fullName>RTR_Destination__c</fullName>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>