force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RTR_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>