force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_End_Kms__c.field-meta.xml
<CustomField>
    <fullName>RTR_End_Kms__c</fullName>
    <label>End Kms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>