force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_End_reading__c.field-meta.xml
<CustomField>
    <fullName>RTR_End_reading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Reading</label>
    <type>Checkbox</type>
</CustomField>