force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Expected_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>RTR_Expected_End_Date_Time__c</fullName>
    <label>Expected End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>