force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Expected_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>RTR_Expected_Return_Date__c</fullName>
    <label>Expected Return Date</label>
    <type>Date</type>
</CustomField>