force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_New_Number__c.field-meta.xml
<CustomField>
    <fullName>RTR_New_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Number</label>
    <referenceTo>RTR_Route_Master__c</referenceTo>
    <relationshipName>Reva_Transport_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>