force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Number_of_people__c.field-meta.xml
<CustomField>
    <fullName>RTR_Number_of_people__c</fullName>
    <label>Number of People</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>