force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Pick_Up_Point__c.field-meta.xml
<CustomField>
    <fullName>RTR_Pick_Up_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pick Up Point</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>$Source.RTR_Routes__c</field>
            <operation>equals</operation>
            <valueField>RTR_Route_Pick_Up_Point__c.RTR_Route_Master__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RTR_Route_Pick_Up_Point__c</referenceTo>
    <relationshipName>Reva_Transport_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>