force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Purpose__c.field-meta.xml
<CustomField>
    <fullName>RTR_Purpose__c</fullName>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>