force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Rate_per_KM__c.field-meta.xml
<CustomField>
    <fullName>RTR_Rate_per_KM__c</fullName>
    <label>Rate per KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>