force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Reason_For_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>RTR_Reason_For_Cancellation__c</fullName>
    <description>Reason for cancelling transport facility</description>
    <inlineHelpText>Reason for cancelling transport facility</inlineHelpText>
    <label>Reason For Cancellation</label>
    <type>TextArea</type>
</CustomField>