force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Reva_Transport__c.field-meta.xml
<CustomField>
    <fullName>RTR_Reva_Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field is used to tag to Reva Transport record</description>
    <label>REVA Transport</label>
    <referenceTo>Reva_Transport__c</referenceTo>
    <relationshipLabel>REVA Transport Requests</relationshipLabel>
    <relationshipName>Reva_Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>