force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Route_Pick_Up_Point__c.field-meta.xml
<CustomField>
    <fullName>RTR_Route_Pick_Up_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Pick Up Point</label>
    <referenceTo>RTR_Route_Pick_Up_Point__c</referenceTo>
    <relationshipName>Reva_Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>