force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Routes__c.field-meta.xml
<CustomField>
    <fullName>RTR_Routes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Number</label>
    <referenceTo>RTR_Route_Master__c</referenceTo>
    <relationshipName>Reva_Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>