force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_School_Name__c.field-meta.xml
<CustomField>
    <fullName>RTR_School_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>University Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>REVA Transport Requests</relationshipLabel>
    <relationshipName>REVA_Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>