force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>RTR_Staff_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REVA_Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>