force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RTR_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>