force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Start_reading__c.field-meta.xml
<CustomField>
    <fullName>RTR_Start_reading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Reading</label>
    <type>Checkbox</type>
</CustomField>