force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Student__c.field-meta.xml
<CustomField>
    <fullName>RTR_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to select which student is applying for Transport request</description>
    <label>Student/Faculty/Non-Faculty</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND (2 OR 4)) OR 3</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Special Request</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Student</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Transport Cancellation</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Applicant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>REVA Transport Requests (Student/Faculty/Non-Faculty)</relationshipLabel>
    <relationshipName>Reva_Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>