force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Time__c.field-meta.xml
<CustomField>
    <fullName>RTR_Time__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>