force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Title__c.field-meta.xml
<CustomField>
    <fullName>RTR_Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>