force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Total_Amount_Spent__c.field-meta.xml
<CustomField>
    <fullName>RTR_Total_Amount_Spent__c</fullName>
    <label>Total Amount Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>