force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Type__c.field-meta.xml
<CustomField>
    <fullName>RTR_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee Concession</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>