force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Type_of_the_Trip__c.field-meta.xml
<CustomField>
    <fullName>RTR_Type_of_the_Trip__c</fullName>
    <label>Type of the Trip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Department specific visits</fullName>
            </value>
            <value>
                <fullName>General visits</fullName>
            </value>
            <value>
                <fullName>Outreach program visits</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>