force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Type_of_vehicle_required__c.field-meta.xml
<CustomField>
    <fullName>RTR_Type_of_vehicle_required__c</fullName>
    <label>Type of vehicle required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>