force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTR_Visit_date__c.field-meta.xml
<CustomField>
    <fullName>RTR_Visit_date__c</fullName>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>