force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/RTRStudent_Faculty_NonFaculty__c.field-meta.xml
<CustomField>
    <fullName>RTRStudent_Faculty_NonFaculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student/Faculty/NonFaculty</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reva Transport Requests (Student/Faculty/NonFaculty)</relationshipLabel>
    <relationshipName>Reva_Transport_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>