force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/SRN_AppNumber__c.field-meta.xml
<CustomField>
    <fullName>SRN_AppNumber__c</fullName>
    <label>SRN/AppNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>