force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/SRN_EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>SRN_EmployeeID__c</fullName>
    <label>SRN/Application/EmployeeNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>