force-app/main/default/objects/RTR_Reva_Transport_Request__c/fields/Via__c.field-meta.xml
<CustomField>
    <fullName>Via__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Via</label>
    <referenceTo>RTR_Route_Pick_Up_Point__c</referenceTo>
    <relationshipLabel>Reva Transport Requests (Via)</relationshipLabel>
    <relationshipName>Reva_Transport_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>