force-app/main/default/objects/RTR_Reva_Transport_Request__c/recordTypes/Fee_Concession.recordType-meta.xml
<RecordType>
    <fullName>Fee_Concession</fullName>
    <active>true</active>
    <description>Transport Fee Concession for Student</description>
    <label>Special Request</label>
</RecordType>