force-app/main/default/objects/RTR_Reva_Transport_Request__c/recordTypes/Route_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Route_Change_Request</fullName>
    <active>true</active>
    <description>Route change request for student/faculty/nonTeaching</description>
    <label>Route Change Request</label>
</RecordType>