force-app/main/default/objects/RTR_Reva_Transport_Request__c/recordTypes/RTR_General_Notifications.recordType-meta.xml
<RecordType>
    <fullName>RTR_General_Notifications</fullName>
    <active>true</active>
    <label>General Notifications</label>
</RecordType>