force-app/main/default/objects/RTR_Reva_Transport_Request__c/recordTypes/RTR_Route_Specific_Notifications.recordType-meta.xml
<RecordType>
    <fullName>RTR_Route_Specific_Notifications</fullName>
    <active>true</active>
    <label>Route Specific Notifications</label>
</RecordType>