force-app/main/default/objects/RTR_Reva_Transport_Request__c/recordTypes/Transport_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Transport_Cancellation</fullName>
    <active>true</active>
    <description>Cancelling Transport Facility</description>
    <label>Transport Cancellation</label>
</RecordType>