force-app/main/default/objects/RTR_Reva_Transport_Request__c/recordTypes/Vehicle_Request.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Request</fullName>
    <active>true</active>
    <description>Vehicle Request for the REVA University Staff</description>
    <label>Vehicle Request</label>
</RecordType>