force-app/main/default/objects/RTR_Reva_Transport_Request__c/validationRules/Expected_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR( DATEVALUE(RTR_Expected_End_Date_Time__c) &lt;  RTR_Visit_date__c ,DATEVALUE(RTR_Expected_End_Date_Time__c)&lt; DATEVALUE( RTR_Expected_Start_Date_Time__c ))</errorConditionFormula>
    <errorDisplayField>RTR_Expected_End_Date_Time__c</errorDisplayField>
    <errorMessage>Expected End Date should be greater than Start Date and Visit Date</errorMessage>
</ValidationRule>