force-app/main/default/objects/RTR_Reva_Transport_Request__c/validationRules/Expected_Return_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Return_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(RTR_Expected_Return_Date__c &lt;  RTR_Visit_date__c ,RTR_Expected_Return_Date__c &lt;  DATEVALUE( RTR_Expected_Start_Date_Time__c) )</errorConditionFormula>
    <errorDisplayField>RTR_Expected_Return_Date__c</errorDisplayField>
    <errorMessage>Expected Return Date should be greater than start date and visit date.</errorMessage>
</ValidationRule>