force-app/main/default/objects/RTR_Reva_Transport_Request__c/validationRules/Expected_Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(RTR_Expected_Start_Date_Time__c) &lt; Today()</errorConditionFormula>
    <errorDisplayField>RTR_Expected_Start_Date_Time__c</errorDisplayField>
    <errorMessage>Expected start date must be today or later.</errorMessage>
</ValidationRule>