force-app/main/default/objects/RTR_Reva_Transport_Request__c/validationRules/RTR_Assign_driver.validationRule-meta.xml
<ValidationRule>
    <fullName>RTR_Assign_driver</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(RTR_Assign_driver__c)),
  NOT(REGEX(RTR_Assign_driver__c, &quot;^[a-zA-Z .]+$&quot;))
)</errorConditionFormula>
    <errorMessage>Only alphabetic characters are allowed in this field.</errorMessage>
</ValidationRule>