force-app/main/default/objects/RTR_Reva_Transport_Request__c/validationRules/RTR_Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>RTR_Date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>RTR_Visit_date__c  &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>RTR_Visit_date__c</errorDisplayField>
    <errorMessage>Date must be today or in the future. Please select a valid date.</errorMessage>
</ValidationRule>