force-app/main/default/objects/RTR_Reva_Transport_Request__c/validationRules/RTR_Date_validationGeneralNotify.validationRule-meta.xml
<ValidationRule>
    <fullName>RTR_Date_validationGeneralNotify</fullName>
    <active>true</active>
    <errorConditionFormula>RTR_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorMessage>Please enter a valid date. Dates in the past are not allowed.</errorMessage>
</ValidationRule>