force-app/main/default/objects/RTR_Reva_Transport_Request__c/validationRules/RTR_staff_name.validationRule-meta.xml
<ValidationRule>
    <fullName>RTR_staff_name</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( RTR_Staff_Name__c )),
  NOT(REGEX(RTR_Staff_Name__c, &quot;^[a-zA-Z .]+$&quot;))
)</errorConditionFormula>
    <errorMessage>Only alphabetic characters are allowed in this field.</errorMessage>
</ValidationRule>