force-app/main/default/objects/RTR_Reva_Transport_Request__c/validationRules/RTR_start_date_ValidationGeneralNotify.validationRule-meta.xml
<ValidationRule>
    <fullName>RTR_start_date_ValidationGeneralNotify</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    RTR_Start_Date__c &lt; TODAY(),
    RTR_Start_Date__c &gt;= RTR_End_Date__c
)</errorConditionFormula>
    <errorMessage>Start date must be before today&apos;s date and not greater than or equal to the end date.</errorMessage>
</ValidationRule>