force-app/main/default/objects/RTR_Reva_Transport_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RTR_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>RTR_Status__c</columns>
    <columns>RTR_Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>