force-app/main/default/objects/RTR_Reva_Transport_Request__c/listViews/Department_of_Administration_RTR_Reva_Transport_Request.listView-meta.xml
<ListView>
    <fullName>Department_of_Administration_RTR_Reva_Transport_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>School of Management Studies</label>
    <queue>School_of_Management_Studies</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>