force-app/main/default/objects/RTR_Reva_Transport_Request__c/listViews/Finance_Team_RTR_Reva_Transport_Request.listView-meta.xml
<ListView>
    <fullName>Finance_Team_RTR_Reva_Transport_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Team</label>
    <queue>Finance_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>