force-app/main/default/objects/RTR_Reva_Transport_Request__c/listViews/Route_Change_Request.listView-meta.xml
<ListView>
    <fullName>Route_Change_Request</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Reva_Transport_Request__c.Route_Change_Request</value>
    </filters>
    <label>Route Change Request</label>
</ListView>